Ch04/config/webapp-deployment-v4.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deployment-5.0
  labels:
    app: webapp
    version: v5.0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
        version: v5.0
      annotations:
        sidecar.istio.io/rewriteAppHTTPProbers: "true"
    spec:
      containers:
      - name: webapp
        image: web-app:5.0
        imagePullPolicy: Never
        ports:
        - containerPort: 5000
        readinessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 40
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 120 
          periodSeconds: 5
