Ch04/config/srv.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: srv-ext
spec:
  hosts:
  - srv.com
  ports:
  - number: 80
    name: http
    protocol: HTTP
